added links to modal windows Settings and Friends

--- a/crypfolio/web/faces/account-menu.xhtml
+++ b/crypfolio/web/faces/account-menu.xhtml
@@ -11,9 +11,19 @@
             <i class="fas fa-user-circle menu-account-img blue"></i>
 
             <p:menuButton value="#{userBacking.user.email}" iconPos="right">
-                <p:menuitem value="Settings" actionListener="#" icon="menubutton1"/>
-                <p:menuitem value="Friends" actionListener="#" icon="menubutton2"/>
-                <p:menuitem value="Logout" action="#{logoutBacking.logout}" icon="menubutton3"/>
+
+                <p:menuitem value="Settings"
+                            onclick="PF('dlgSettings').show();"/>
+                            icon="menubutton1"
+
+                <p:menuitem value="Friends"
+                            onclick="PF('dlgFriends').show();"/>
+                            icon="menubutton2"
+
+                <p:menuitem value="Logout"
+                            action="#{logoutBacking.logout}"
+                            icon="menubutton3"/>
+
             </p:menuButton>
 
         </h:form>
