--- a/crypfolio/web/faces/user.xhtml
+++ b/crypfolio/web/faces/user.xhtml
@@ -60,6 +60,12 @@
 
         </p:tabView>
 
+        <!-- including modal window "friends" -->
+        <ui:include src="/faces/settings.xhtml"/>
+
+        <!-- including modal window "friends" -->
+        <ui:include src="/faces/friends.xhtml"/>
+
         <!--   =====================               Global ConfirmDialog window -->
         <h:form>
             <p:confirmDialog global="true" showEffect="bounce" hideEffect="fade" closeOnEscape="true">
