--- a/crypfolio/web/faces/account-menu.xhtml
+++ b/crypfolio/web/faces/account-menu.xhtml
@@ -13,12 +13,12 @@
             <p:menuButton value="#{userBacking.user.email}" iconPos="right">
 
                 <p:menuitem value="Settings"
-                            onclick="PF('dlgSettings').show();"/>
-                            icon="menubutton1"
+                            onclick="PF('dlgSettings').show();"
+                            icon="menubutton1"/>
 
                 <p:menuitem value="Friends"
-                            onclick="PF('dlgFriends').show();"/>
-                            icon="menubutton2"
+                            onclick="PF('dlgFriends').show();"
+                            icon="menubutton2"/>
 
                 <p:menuitem value="Logout"
                             action="#{logoutBacking.logout}"
