refactoring signUp functionality to avoid not necessary entity Portfolio

--- a/crypfolio/web/faces/signup.xhtml
+++ b/crypfolio/web/faces/signup.xhtml
@@ -44,7 +44,7 @@
                             <p:outputPanel class="input-group">
 
                                 <span class="input-group-addon"><i class="fas fa-tachometer-alt"></i></span>
-                                <p:inputText id="usPortfilioName" value="#{signupBacking.portfolio.name}"
+                                <p:inputText id="usPortfilioName" value="#{signupBacking.user.portfolio.name}"
                                              required="true" type="text" size="20" placeholder="Portfolio Name"
                                              requiredMessage="Error: enter portfolio name"
                                              styleClass="form-control noshadow"/>
