small refactoring, used autocomplete="off" to all <p:password input forms

--- a/crypfolio/web/faces/forgot-password.xhtml
+++ b/crypfolio/web/faces/forgot-password.xhtml
@@ -25,6 +25,7 @@
 
                     <h:panelGrid styleClass="order-table">
 
+                        <!--   USER'S   EMAIL   -->
                         <p:outputLabel for="usEmail" value="Email:"/>
 
                         <p:outputPanel class="input-group">
@@ -59,6 +60,7 @@
 
                     <h:panelGrid styleClass="order-table">
 
+                        <!--   USER'S   NEW   PASSWORD   -->
                         <p:outputLabel for="newPassword" value="New password:"/>
 
                         <p:outputPanel class="input-group">
@@ -66,25 +68,32 @@
                             <span class="input-group-addon"><i class="fa fa-key"></i></span>
 
                             <p:password id="newPassword" value="#{forgotPasswordBacking.password}"
+                                        autocomplete="off"
                                         required="true" type="password" placeholder="Password"
                                         requiredMessage="Error: enter new password"
                                         match="confirmNewPassword" feedback="true"
                                         styleClass="form-control noshadow">
+
                                 <f:validateLength minimum="6"/>
+
                             </p:password>
 
                         </p:outputPanel>
 
+                        <!--   USER'S   CONFIRM   NEW   PASSWORD   -->
                         <p:outputLabel for="confirmNewPassword" value="Repeat New Password:"/>
 
                         <p:outputPanel class="input-group">
                             <span class="input-group-addon"><i class="fa fa-key"></i></span>
 
                             <p:password id="confirmNewPassword" value="#{forgotPasswordBacking.password}"
+                                        autocomplete="off"
                                         required="true" placeholder="Repeat New Password"
                                         requiredMessage="Error: repeat new password"
                                         styleClass="form-control noshadow">
+
                                 <f:validateLength minimum="6"/>
+
                             </p:password>
 
                         </p:outputPanel>
