--- a/crypfolio/web/faces/account-menu.xhtml
+++ b/crypfolio/web/faces/account-menu.xhtml
@@ -10,7 +10,7 @@
 
             <i class="fas fa-user-circle menu-account-img blue"></i>
 
-            <p:menuButton value="#{userBacking.user.email}" iconPos="right">
+            <p:menuButton value="#{userBacking.activeUser.user.email}" iconPos="right">
 
                 <p:menuitem value="Settings"
                             onclick="PF('dlgSettings').show();"
